# cs202-rcpsp

./: .editorconfig  .gitignore  ARCHITECTURE_REVIEW.md  CLAUDE.md  CP_ALGORITHM_REPORT.md  CP_BLUEPRINT.md  CP_FULL_ROADMAP.md  CP_ROADMAP.md  DOCUMENTATION_INDEX.md  ITERATION_NOTES.md  METRICS.md  Makefile  README.md  REPORT_RERUN_GUIDE.md  SGS_ROADMAP.md  SUBMISSION_CHECKLIST.md  cpp_performance.md  experiments.md  glossary.md  implementation.md  main.py  program.md  programFlow.md  pyproject.toml  report.md  reportDraft.md  reportForDummies.md  reportFormat.md  reportStyle.md  sm_j10_results_current_clean_0p1.json  sm_j10_results_current_clean_1p0.json  sm_j20_results_current_clean_0p1.json  sm_j20_results_current_clean_1p0.json  sm_j30_results_current_clean_0p1.json  solver  solver.cpp  solver_5s.sh  testset_ubo20_results_current_clean_0p1.json  testset_ubo50_results_current_clean_0p1.json
benchmarks/: README.md
changelog/: currentState.md  reportNotes.md  solverImprovementIdeas.md
rcpsp/: README.md  __init__.py  config.py  models.py  parser.py  reference.py  solver.py  temporal.py  validate.py
references/: README.md
scripts/: README.md  analyze_cp_residue.py  autoresearch_lib.py  benchmark_rcpsp.py  derive_hard_instances.py  fetch_reference_csvs.py  guardrails_lib.py  quick_hard_bench.sh  run_autoresearch_eval.py  run_autoresearch_search.py  run_cp_residue.py  run_guardrails.py  run_report_harness.py  sweep_time_budget.py
sm_j10/: PSP1.SCH  PSP101.SCH  PSP102.SCH  PSP104.SCH  PSP107.SCH  PSP108.SCH  PSP11.SCH  PSP110.SCH  PSP112.SCH  PSP115.SCH  PSP117.SCH  (+123 more)
(+591 files in other folders)
