[project]
name = "rcpsp-max-solver"
version = "0.1.0"
description = "Heuristic solver for RCPSP/max benchmark instances"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.4,<9",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
